@startuml Tables
skinparam monochrome true
skinparam ranksep 20
skinparam dpi 150
skinparam packageTitleAlignment left
skinparam usecaseBorderThickness 0.4
skinparam defaultFontSize 12
skinparam rectangleBorderThickness 1
hide methods

class Category {
  name: string
}

class Action {
  createdAt: Date
  orderIndex: int
  undone: boolean
}

class Change {
  rowId: int
  orderIndex: int
}

enum ChangeType {
  Insert
  Update
  Delete
}

class Table {
  name: string
}

class Column {
  name: string
  type: string
}

class Value {
  oldValue: string
  newValue: string
}

class Channel {
}

enum ChannelStatus {
  Ready
  Undoing
  Recording
  Redoing
}

class CleanUpTask {
  name: string
  refTableName: string
}

enum CleanUpTaskType {
  Root
  Table
  Trigger
}

class Logs {
  query: string
  parameters: string
  location: string
}

object Config {
  debug: boolean;
}

class Variables {
  name: string
  value: int
}

note as NoteLogs
when Config.debug=true
end note

Channel o-- ChannelStatus
Action o-- Channel
Action o-- Category
Change o-- Table
Change o-- Action
Change o-- ChangeType
Table o-- Channel
Column o-- Table 
Value o-- Column
Value o-- Change
CleanUpTask o-- CleanUpTaskType
Logs -[hidden]up- CleanUpTaskType
NoteLogs -up-> Logs 
NoteLogs .down. Config 
@enduml